<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_statistic"
        android:title="@string/info_covid" />
    <item
        android:id="@+id/navigation_prevention"
        android:icon="@drawable/ic_prevention"
        android:title="@string/prevention" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
</menu>