<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.quiz.ResultQuizActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200"
        app:lottie_autoPlay="true"
        app:lottie_fileName="congratulations.json"
        app:lottie_loop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:letterSpacing="0.5"
        android:text="@string/congratulations"
        android:textAppearance="@style/Text.TitleHeader"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/result_score"
        android:textAppearance="@style/Text.DescriptionHeader"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/score"
        android:textAppearance="@style/Text.DescriptionHeader"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

    <Button
        android:id="@+id/btn_ulang"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:letterSpacing="0.1"
        android:text="@string/btn_repeat"
        android:textAppearance="@style/Text.Button"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

    <Button
        android:id="@+id/btn_selesai"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="285dp"
        android:letterSpacing="0.1"
        android:text="@string/btn_finish"
        android:textAppearance="@style/Text.Button"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />
</androidx.constraintlayout.widget.ConstraintLayout>