<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.quiz.QuestionActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:max="5"
        android:minHeight="50dp"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textAppearance="@style/Text.TitleHeader"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100" />

    <TextView
        android:id="@+id/tv_progress_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_question"
        android:textAppearance="@style/Text.TitleHeader"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textAppearance="@style/Text.DescriptionHeader"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/tv_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:background="@drawable/custom_question_option"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_one"
        android:textAppearance="@style/Text.DescriptionHeader"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_question"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/tv_option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_question_option"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_two"
        android:textAppearance="@style/Text.DescriptionHeader"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_option1"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_question_option"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_three"
        android:textAppearance="@style/Text.DescriptionHeader"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_option2"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_question_option"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_four"
        android:textAppearance="@style/Text.DescriptionHeader"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_option3"
        tools:layout_editor_absoluteX="-27dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:letterSpacing="0.1"
        android:text="@string/btn_submit"
        android:textAppearance="@style/Text.Button"
        android:textSize="18sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_option4"
        tools:layout_editor_absoluteX="96dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:lottie_autoPlay="true"
        app:lottie_fileName="staySafe.json"
        app:lottie_loop="true"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>