<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.quiz.QuizActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/splash"
        android:layout_centerInParent="true"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="lottieQuiz.json"
        app:lottie_loop="true"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/quiz"
        android:textAppearance="@style/Text.TitleHeader"
        android:textColor="@color/blue_sea"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/desc_quiz"
        android:textAppearance="@style/Text.DescriptionHeader"
        android:textColor="@color/blue_sea"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:letterSpacing="0.1"
        android:text="@string/btn_start"
        android:textAlignment="center"
        android:textAppearance="@style/Text.Button"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView2"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView2"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />
</androidx.constraintlayout.widget.ConstraintLayout>